--- a/Bots/DotNet/Skills/Composer/EchoSkillBotComposer/runtime/azurewebapp/Microsoft.BotFramework.Composer.WebApp.csproj
+++ b/Bots/DotNet/Skills/Composer/EchoSkillBotComposer/runtime/azurewebapp/Microsoft.BotFramework.Composer.WebApp.csproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <AspNetCoreHostingModel>OutOfProcess</AspNetCoreHostingModel>
   </PropertyGroup>
   <ItemGroup>
@@ -16,7 +16,7 @@
     <CodeAnalysisRuleSet>..\core\Microsoft.BotFramework.Composer.Core.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.5" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.14" />
     <PackageReference Include="Microsoft.Bot.Builder" Version="4.13.0" />
     <PackageReference Include="Microsoft.Bot.Builder.AI.Luis" Version="4.13.0" />
     <PackageReference Include="Microsoft.Bot.Builder.AI.QnA" Version="4.13.0" />
